Acho que agora foi

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <div class="principaisNoticias">
             <div class="noticia">
                 <a href="html/noticia1.html"><img class="imagemNoticia" src="imagens/tchaikovsky.webp" alt=""></a>
-                <h2><a class="tituloNoticia" href="/html/noticia1.html">Tchaikovsky - Swan Lake</a></h2>
+                <a  href="/html/noticia1.html"></a><strong class="tituloNoticia">Tchaikovsky - Swan Lake</strong></a>
             </div>
             <div class="noticia">
                 <a href="html/noticia2.html"><img class="imagemNoticia" src="imagens/beethoven.webp" alt=""></a>
-                <h2><a class="tituloNoticia" href="/html/noticia2.html">Beethoven – Sonata ao Luar 3º Movimento</a></h2>
+                <a  href="/html/noticia2.html"></a><strong class="tituloNoticia">Beethoven – Sonata ao Luar 3º Movimento</strong></a>
             </div>
             <div class="noticia">
                 <a href="html/noticia3.html"><img class="imagemNoticia" src="imagens/debussy.webp" alt=""></a>
-                <h2><a class="tituloNoticia" href="/html/noticia3.html">Debussy - Clair de Lune</a></h2>
+                <a  href="/html/noticia3.html"></a><strong class="tituloNoticia">Debussy - Clair de Lune</strong></a>
             </div>
         </div>        
         <p class="texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, accusantium? Sed distinctio, culpa placeat soluta nulla et esse asperiores temporibus dolore delectus tempore molestias accusantium maiores in eos doloribus consectetur eligendi dolorum hic odit. Dolorum adipisci sunt, quae totam veritatis corporis natus aliquam sequi nesciunt, quas quam provident. Mollitia fugit vitae ipsam repudiandae quasi, neque soluta itaque assumenda totam non, accusamus repellendus voluptatum, laudantium distinctio at laboriosam minus unde reprehenderit porro dolore! Delectus distinctio eaque veritatis. Vel, numquam nostrum? Cupiditate vitae incidunt nesciunt soluta ut est culpa quas. Error, consectetur iste voluptatibus voluptatem consequatur molestias deserunt optio asperiores iure amet alias laboriosam aperiam qui consequuntur, aspernatur neque corrupti aliquid laborum nisi. Inventore ratione ipsam iure accusamus quaerat, nisi vel, maiores, tempora aperiam unde alias sit debitis necessitatibus magnam sequi corporis porro commodi molestiae tenetur id veniam cum magni eos! Mollitia, placeat consectetur laborum quasi quaerat officiis ducimus temporibus aliquam nemo iusto laboriosam explicabo? Quis nam dignissimos voluptas totam voluptatum esse veritatis, libero necessitatibus iusto numquam velit dicta neque obcaecati! Enim sit necessitatibus, laborum at, labore nulla reprehenderit beatae quibusdam non perferendis optio consectetur! Iure cumque doloremque earum distinctio modi, quam libero alias quas illum cum! Deleniti et rem quos? Obcaecati, sit corrupti nemo nobis, nam, ea iure iusto rerum nostrum laborum aliquid doloribus tempora! Est, cum, reprehenderit minima voluptatibus similique sunt autem quibusdam ducimus consequatur vel, tempora saepe? Inventore ex, sunt odit vitae ratione culpa laudantium adipisci optio aliquid voluptates excepturi? Repudiandae, odio? Distinctio, explicabo! Odit non odio deserunt cupiditate repudiandae? Maxime voluptas dolorum iusto, possimus quod rerum qui dignissimos sed cumque, ex nostrum commodi hic? Excepturi, magni, quod, consequatur odit nihil facere rerum veritatis modi ipsa ad accusamus eius sunt! Ea nihil aliquam aut commodi voluptates tempora veniam, voluptate delectus incidunt repellendus omnis quia, qui similique expedita fuga optio.</p>
